--- a/prompts.ini
+++ b/prompts.ini
@@ -1,14 +1,23 @@
 [Data Source]
-file=dataSource.txt
-
-[Script]
-file=script.txt
-
-[Event]
-file=event.txt
-
-[Trigger]
-file=trigger.txt
+files=basePrompt.txt,dataSource.txt,outputSuggestions.txt
 
 [Data Source Threaded]
-file=dataSourceThreaded.txt
+files=basePrompt.txt,dataSourceThreaded.txt,outputSuggestions.txt
+
+[Script]
+files=basePrompt.txt,script.txt
+
+[Event]
+files=basePrompt.txt,dataSetPrompt.txt,event.txt
+
+[Trigger Calculation]
+files=basePrompt.txt,dataSetPrompt.txt,triggerCalculation.txt
+
+[Trigger Output]
+files=basePrompt.txt,dataSetPrompt.txt,triggerOutput.txt
+
+[Parameter Setup Func]
+files=basePrompt.txt,parameterSetupFunc.txt
+
+[Modify]
+files=modify.txt
