catching up updates that were applied when it wasn't a submodule somehow

--- a/prompts.ini
+++ b/prompts.ini
@@ -1,8 +1,8 @@
 [Data Source]
 files=basePrompt.txt,dataSource.txt,outputSuggestions.txt
 
-[Data Source Threaded]
-files=basePrompt.txt,dataSourceThreaded.txt,outputSuggestions.txt
+;[Data Source Threaded]
+;files=basePrompt.txt,dataSourceThreaded.txt,outputSuggestions.txt
 
 [Script]
 files=basePrompt.txt,script.txt
