adding script for creating output directory

--- a/prompts.ini
+++ b/prompts.ini
@@ -1,23 +1,29 @@
 [Data Source]
 files=basePrompt.txt,dataSource.txt,outputSuggestions.txt
+output=dataSource.txt
 
 ;[Data Source Threaded]
 ;files=basePrompt.txt,dataSourceThreaded.txt,outputSuggestions.txt
 
 [Script]
 files=basePrompt.txt,script.txt
+output=script.txt
 
 [Event]
 files=basePrompt.txt,dataSetPrompt.txt,event.txt
+output=event.txt
 
 [Trigger Calculation]
 files=basePrompt.txt,dataSetPrompt.txt,triggerCalculation.txt
+output=triggerCalculation.txt
 
 [Trigger Output]
 files=basePrompt.txt,dataSetPrompt.txt,triggerOutput.txt
+output=triggerOutput.txt
 
 [Parameter Setup Func]
 files=basePrompt.txt,parameterSetupFunc.txt
+output=parameterSetupFunc.txt
 
 [Modify]
 files=modify.txt
