--- a/prompts.ini
+++ b/prompts.ini
@@ -1,24 +1,24 @@
 [Data Source]
-files=basePrompt.txt,dataSource.txt,outputSuggestions.txt
+files=basePrompt.txt,internalSetupFuncs.txt,dataSource.txt,outputSuggestions.txt
 output=dataSource.txt
 
 ;[Data Source Threaded]
-;files=basePrompt.txt,dataSourceThreaded.txt,outputSuggestions.txt
+;files=basePrompt.txt,internalSetupFuncs.txt,dataSourceThreaded.txt,outputSuggestions.txt
 
 [Script]
-files=basePrompt.txt,script.txt
+files=basePrompt.txt,internalSetupFuncs.txt,script.txt
 output=script.txt
 
 [Event]
-files=basePrompt.txt,dataSetPrompt.txt,event.txt
+files=basePrompt.txt,internalSetupFuncs.txt,dataSetPrompt.txt,event.txt
 output=event.txt
 
 [Trigger Calculation]
-files=basePrompt.txt,dataSetPrompt.txt,triggerCalculation.txt
+files=basePrompt.txt,internalSetupFuncs.txt,dataSetPrompt.txt,triggerCalculation.txt
 output=triggerCalculation.txt
 
 [Trigger Output]
-files=basePrompt.txt,dataSetPrompt.txt,triggerOutput.txt
+files=basePrompt.txt,internalSetupFuncs.txt,dataSetPrompt.txt,triggerOutput.txt
 output=triggerOutput.txt
 
 [Parameter Setup Func]
